--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -50,6 +50,8 @@
       <header>
         Welcome to my Blog
       </header>
+      <img src="http://images.nationalgeographic.com/wpf/media-live/photos/000/002/cache/lightning-over-water_270_600x450.jpg" />
+        <!-- Photo courtesy of National Geographic -->
       <section>
         <h1>Some of my intrests:</h1>
         <ul>
